Fix navbar scrolling on mobile and refactor SlotCardPartial

--- a/ProjectLighthouse/StaticFiles/css/styles.css
+++ b/ProjectLighthouse/StaticFiles/css/styles.css
@@ -81,6 +81,7 @@ canvas.hide-subjects {
     overflow-y: hidden;
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
+    width: 100%;
 }
 
 /*#region Cards*/
